@@ -5,8 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>pom</packaging>
+
     <groupId>oap</groupId>
     <artifactId>oap.maven</artifactId>
+
     <version>${oap.maven.project.version}</version>
     <organization>
         <name>Open Application Platform</name>
@@ -14,7 +16,7 @@
     </organization>
 
     <properties>
-        <oap.maven.project.version>18.3.7.3</oap.maven.project.version>
+        <oap.maven.project.version>18.3.7.4</oap.maven.project.version>
 
         <maven.compiler.release>18</maven.compiler.release>
         <encoding>UTF-8</encoding>
@@ -79,6 +81,8 @@
                         --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                         --add-opens=java.base/java.net=ALL-UNNAMED
                         --add-opens=java.base/java.text=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
                         --add-opens=java.sql/java.sql=ALL-UNNAMED
                     </argLine>
                     <forkCount>${oap.deps.maven.surefire.forkCount}</forkCount>
@@ -220,6 +224,8 @@
                                 --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                                 --add-opens=java.base/java.net=ALL-UNNAMED
                                 --add-opens=java.base/java.text=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                 --add-opens=java.sql/java.sql=ALL-UNNAMED
                             </argLine>
                             <trimStackTrace>false</trimStackTrace>
